# lang-detection

./: CMakeLists.txt  README.md  main.cpp  my_lib.cpp  target.cpp
scripts/dotnet-core-scanner/: README.md  dotnet_core_exes.csv  info.py
scripts/dotnet-core-scanner-v2/: dotnet-scanner.slnx
scripts/dotnet-core-scanner-v2/dotnet-scanner/: Program.cs  dotnet-scanner.csproj  dotnet_core_exes.csv
